--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "nodejs-express-sequelize-mysql",
+  "name": "sequelize-cli-demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
